--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -98,7 +98,7 @@ aside h2 {
 }
 
 .profile-image {
-  background-image: url("https://images.unsplash.com/photo-1618979251882-0b40ef3617f0?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-image: url("../images/image1.jpeg");
   background-size: 100%;
   background-position: center 100%;
   width: var(--aside-width);
@@ -152,3 +152,64 @@ footer p {
   --divider-color: #efefef;
   --font-default-color: #333;
 }
+
+
+.gallery {
+  aspect-ratio: 1 / 1;
+}
+
+.comment-writing-container {
+  display: flex;
+}
+
+.comment-item {
+  border: 0.5px solid lightgray;
+  padding: 10px;
+  margin: 10px;;
+}
+
+.comment-writing-container {
+  margin: 10px;
+  border: 1px solid lightgray;
+  display: flex;
+}
+
+#comment-form {
+  width: 650px;
+  height: 48px;
+  display: flex;
+}
+
+#comment-input {
+  width: 500px;
+  border-color: transparent;
+}
+
+#comment-register {
+  width: 75px;
+  background-color: lightgray;
+}
+
+#comment-cancel {
+  width: 75px;
+  background-color: lightblue;
+}
+
+#comment-input-field {
+  border: 0.5px solid lightgray;
+}
+
+/* .comment-item {
+  width: 720px;
+  display: flex;
+} */
+
+.comment-author {
+  width: 720px;
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+
+
+
