feat : 자기소개 추가

--- a/css/wiki-layout.css
+++ b/css/wiki-layout.css
@@ -144,10 +144,10 @@ footer p {
   --right-sidebar-padding: 32px;
 
   --header-width: 235px;
-  --header-bg-color: #f6f6f6;
+  --header-bg-color: #ddffff;
 
   --aside-width: 350px;
-  --aside-bg-color: #f6f6f6;
+  --aside-bg-color: #ddffff;
 
   --divider-color: #efefef;
   --font-default-color: #333;
